--- a/index.html
+++ b/index.html
@@ -5,10 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AluraBooks</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="banner.css">
+        <link rel="stylesheet" href="carrossel.css">
 </head>
-<body>
+<script type="module">
+    import Swiper from 'https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.mjs'
+    const Swiper = new Swiper
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script>
+    const swiper = new Swiper(".swiper", {
+        spaceBetween: 10,
+        slidesPerView: 3,
+        pagination: {
+            el: ".swiper-pagination",
+            type:"bullets",
+        },
+    });
+  </script>
     <header class="cabeçalho">
         <span class="cabeçalho_menu-hamburguer"></span>
         <img src="img/Logo.svg" alt="Logo da AluraBooks">
@@ -38,4 +62,64 @@
         </ul>
     </header>
 </body>
+<section class="banner">
+    <h2 class="banner_título">Já sabe por onde começar?</h2>
+    <p class="banner_texto">
+        Encontre em nossa estante o que precisa para seu desenvolvimento!
+    </p>
+    <input 
+    type="search" 
+    class="banner_pesquisa"
+    placeholder="Qual será sua próxima leitura?"
+    />
+</section>
+<section class="carrossel">
+    <h2 class="carrossel_título">Novos lançamentos</h2>
+    <div class="swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img
+             src="img/ApacheKafka.png"
+             alt="Livro sobre apache kafka e spring boot da alura books"
+             />
+            </div>
+          <div class="swiper-slide">
+            <img 
+            src="img/Liderança.png"
+            alt="Livro sobre liderança em design da alura books"
+            />
+        </div>
+          <div class="swiper-slide">
+            <img
+             src="img/Javascript.png"
+             alt="Livro sobre javascript assertivo da alura books"
+             />
+            </div>
+          <div class="swiper-slide">
+            <img 
+            src="img/Guia Front-end.png"
+            alt="Livro guia front end"
+            />
+        </div>
+          <div class="swiper-slide">
+            <img 
+            src="img/Portugol.png"
+            alt="Livro sobre Portugol"
+            />
+        </div>
+          <div class="swiper-slide">
+            <img 
+            src="img/Acessibilidade.svg"
+            alt="Livro sobre Acessibilidade"
+            />
+        </div>
+        </div>
+        <!-- If we need pagination -->
+        <div class="swiper-pagination"></div>
+      
+        <!-- If we need navigation buttons -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
+</section>
 </html>
