--- a/index.html
+++ b/index.html
@@ -122,4 +122,73 @@
         <div class="swiper-button-next"></div>
       </div>
 </section>
+<div class="card">
+  <div class="card_descrição">
+    <div class="descrição">
+      <h3 class="descrição_título">Talvez você tmabém se interessee por...</h3>
+      <h2 class="descrição_título-livro">Angular 11 e Firebase</h2>
+      <p class="descrição_texto">
+        Construindo uma aplicação integrada com a plataforma do Google.
+      </p>
+      <img src="img/Angular.png" class="descrição_imagem" />
+    </div>
+  </div>
+  <div class="card_botões">
+    <ul class="botões">
+      <li class="botões_item">
+        <img src="img/Favoritos.svg" alt="Favoritar livro" />
+      </li>
+      <li class="botões_item">
+        <img src="img/Compras.svg" alt="Adicionar no carrinho de compras" />
+      </li>
+    </ul>
+    <a href="#" class="botões_ancora">Saiba mais</a>
+  </div>
+</div>
+<section class=”carrossel”>
+  <h2 class="carrossel__titulo">Mais vendidos</h2>
+  <div class="swiper">
+    <!-- Additional required wrapper -->
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide"><img src="img/ApacheKafka.svg"
+          alt="Livro sobre apache kafka e spring boot da alura books"></div>
+      <div class="swiper-slide"><img src="img/Liderança.svg" alt="Livro sobre liderança em design da alura books">
+      </div>
+      <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alurabooks">
+      </div>
+      <div class="swiper-slide"><img src="img/Guia Front-end.svg" alt="Livro Guia front end"></div>
+      <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
+      <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
+    </div>
+
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  </div>
+
+  <div class="card">
+    <div class="card__descrição">
+      <div class="descrição">
+        <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
+        <h3 class="descrição__titulo">Autora do Mês</h3>
+        <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
+        <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+        </p>
+      </div>
+      <img src="img/Escritora.svg" class="descrição__imagem">
+    </div>
+      <div class="card__botões">
+      <ul class="botões">
+        <li class="botões__item"><img src="img/Favoritos.svg" alt="Favoritar livro"></li>
+        <li class="botões__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+      </ul>
+      <a href="#" class="botões__ancora">Saiba mais</a>
+    </div>
+  </div>
+</section>
+
 </html>
